--- a/seperate_folder.ipynb
+++ b/seperate_folder.ipynb
@@ -41,6 +41,56 @@
     "os.makedirs(plastic_labels_dir, exist_ok=True)\n",
     "os.makedirs(cans_labels_dir, exist_ok=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Separation of images and labels completed!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function to separate images and labels based on class ID\n",
+    "def separate_images_and_labels():\n",
+    "    # List all annotation files (assuming .txt format for annotations)\n",
+    "    label_files = os.listdir(label_dir)\n",
+    "    \n",
+    "    for label_file in label_files:\n",
+    "        # Construct full paths for label and image files\n",
+    "        label_path = os.path.join(label_dir, label_file)\n",
+    "        image_name = label_file.replace('.txt', '.jpg')  # Assuming .jpg for images\n",
+    "        image_path = os.path.join(image_dir, image_name)\n",
+    "        \n",
+    "        # Open annotation file to read class IDs and object information\n",
+    "        with open(label_path, 'r') as f:\n",
+    "            annotations = f.readlines()  # Read all lines, each line is an annotation for one object\n",
+    "        \n",
+    "        # Check each annotation in the file\n",
+    "        for annotation in annotations:\n",
+    "            # Extract the class ID (assuming class ID is the first value in the annotation)\n",
+    "            class_id = int(annotation.split()[0])  # Class ID is assumed to be the first element in the line\n",
+    "            \n",
+    "            # Check the class ID and move the image and label accordingly\n",
+    "            if class_id == 0:  # Cans (class ID 0)\n",
+    "                shutil.copy(image_path, os.path.join(cans_images_dir, image_name))\n",
+    "                shutil.copy(label_path, os.path.join(cans_labels_dir, label_file))\n",
+    "                break  # No need to check further once we move the image to the cans folder\n",
+    "            elif class_id == 1:  # Plastic (class ID 1)\n",
+    "                shutil.copy(image_path, os.path.join(plastic_images_dir, image_name))\n",
+    "                shutil.copy(label_path, os.path.join(plastic_labels_dir, label_file))\n",
+    "                break  # No need to check further once we move the image to the plastic folder\n",
+    "\n",
+    "# Run the function\n",
+    "separate_images_and_labels()\n",
+    "\n",
+    "print(\"Separation of images and labels completed!\")"
+   ]
   }
  ],
  "metadata": {
